[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hopmap"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.25.0",
    "click>=8.3.1",
    "matplotlib>=3.10.8",
    "requests>=2.32.5",
]

[tool.hatch.envs.default]
installer = "uv"

[project.scripts]
hopmap="hopmap.hopmap:plot"